Removed some css styling

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,16 +17,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-body {
-  /* margin: 0; */
-  /* display: flex; */
-  /* place-items: center stretch; */
-}
-
 @media only screen and (max-width: 476px) {
   body {
       /* margin: 0; */
   display: flex;
-  /* place-items: center stretch; */
+  /* place-items: center; */
   }
 }
