--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,7 +20,7 @@
 @media only screen and (max-width: 476px) {
   body {
       /* margin: 0; */
-  display: flex;
+  /* display: flex; */
   /* place-items: center; */
   }
 }
