--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,7 +10,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #8EC5FC;
+  background-color: #000000;
   /* background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%); */
   ;
 
