--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,3 +4,12 @@
   text-align: center;
   /* width: 100%; */
 }
+
+h1 {
+  color: #d97706;
+  padding-bottom: 3em;
+  text-align: center;
+}
+p {
+  padding-bottom: 1em;
+}
